# frodo-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/frodo-agent/: Cargo.toml
crates/frodo-agent/src/: lib.rs  openai.rs
crates/frodo-cli/: Cargo.toml
crates/frodo-cli/src/: cli.rs  config.rs  main.rs  storage.rs  sync.rs  tasks.rs  update.rs
crates/frodo-cli/src/tui/: mod.rs
crates/frodo-core/: Cargo.toml
crates/frodo-core/src/: lib.rs  tasks.rs
crates/frodo-core/src/agent/: mod.rs
crates/frodo-core/src/storage/: mod.rs  secure_store.rs
crates/frodo-storage/: Cargo.toml
crates/frodo-storage/src/: key_provider.rs  lib.rs  secure_file_store.rs
crates/frodo-sync/: Cargo.toml
crates/frodo-sync/src/: lib.rs
crates/frodo-task/: Cargo.toml
crates/frodo-task/src/: lib.rs
docs/: ARCHITECTURE.md  SBOM.md
