[workspace]
members = ["crates/frodo-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.87"
authors = ["Frodo CLI Team"]

[workspace.dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
