[workspace]
members = ["crates/frodo-cli", "crates/frodo-core", "crates/frodo-storage", "crates/frodo-agent"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.87"
authors = ["Frodo CLI Team"]

[workspace.dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
serde_json = "1.0.145"
aes-gcm = { version = "0.10.3", features = ["aes"] }
rand = "0.8.5"
base64 = "0.22.1"
keyring = "3.6.3"
tempfile = "3.23.0"
dirs = "6.0.0"
toml = "0.9.8"
async-openai = { version = "0.31.1", features = ["chat-completion"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls-native-roots"] }
