[package]
name = "frodo-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
color-eyre.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui = "0.29.0"
crossterm = "0.29.0"
dirs.workspace = true
frodo-core = { path = "../frodo-core" }
frodo-storage = { path = "../frodo-storage" }
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
