[package]
name = "frodo-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
frodo-core = { path = "../frodo-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true

[dev-dependencies]
tokio.workspace = true
