[package]
name = "frodo-task"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
frodo-core = { path = "../frodo-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
